--- a/jobs/pipeline.yml
+++ b/jobs/pipeline.yml
@@ -1,8 +1,8 @@
-- job:
-    name: dist-clean-lynx64
-    display-name: dist-clean-lynx64
+- job-template:
+    name: clean-{path}-lynx64
+    display-name: clean-{path}-lynx64
     project-type: freestyle
-    description: Clean up "dist" for all jobs.
+    description: Clean up "{path}" for all jobs.
     node: linux
     build-discarder:
         daysToKeep: -1
@@ -11,49 +11,13 @@
         artifactNumToKeep: -1
     builders:
         - shell: |
-            JENKINS_WS=${{JENKINS_HOME}}/workspace
+            rm -Rf /app/{path}/*
 
-            if [ -d ${{JENKINS_WS}}/bullet-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/bullet-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/ogg-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/ogg-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/vorbis-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/vorbis-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/sdl-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/sdl-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/python-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/python-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/panda3d-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/panda3d-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/panda3d-kphys-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/panda3d-kphys-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/panda3d-krender-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/panda3d-krender-lynx64/dist
-            fi
-
-            if [ -d ${{JENKINS_WS}}/sdk-lynx64 ]; then
-                rm -Rf ${{JENKINS_WS}}/sdk-lynx64/dist
-            fi
-
-- job:
-    name: dist-clean-winx64
-    display-name: dist-clean-winx64
+- job-template:
+    name: clean-{path}-winx64
+    display-name: clean-{path}-winx64
     project-type: freestyle
-    description: Clean up "dist" for all jobs.
+    description: Clean up "{path}" for all jobs.
     node: windows
     build-discarder:
         daysToKeep: -1
@@ -62,35 +26,23 @@
         artifactNumToKeep: -1
     builders:
         - batch: |
-            set JENKINS_WS=%HOME%\Jenkins\Jenkins\workspace
+            rd /S /Q C:\{path}
 
-            if exist %JENKINS_WS%\bullet-winx64 (
-                rd /S /Q %JENKINS_WS%\bullet-winx64\dist
-            )
+- project:
+    name: clean-build
+    jobs:
+        - 'clean-{path}-lynx64':
+            path: build
+        - 'clean-{path}-winx64':
+            path: build
 
-            if exist %JENKINS_WS%\sdl-winx64 (
-                rd /S /Q %JENKINS_WS%\sdl-winx64\dist
-            )
-
-            if exist %JENKINS_WS%\python-winx64 (
-                rd /S /Q %JENKINS_WS%\python-winx64\dist
-            )
-
-            if exist %JENKINS_WS%\panda3d-winx64 (
-                rd /S /Q %JENKINS_WS%\panda3d-winx64\dist
-            )
-
-            if exist %JENKINS_WS%\panda3d-kphys-winx64 (
-                rd /S /Q %JENKINS_WS%\panda3d-kphys-winx64\dist
-            )
-
-            if exist %JENKINS_WS%\panda3d-krender-winx64 (
-                rd /S /Q %JENKINS_WS%\panda3d-krender-winx64\dist
-            )
-
-            if exist %JENKINS_WS%\sdk-winx64 (
-                rd /S /Q %JENKINS_WS%\sdk-winx64\dist
-            )
+- project:
+    name: clean-opt
+    jobs:
+        - 'clean-{path}-lynx64':
+            path: opt
+        - 'clean-{path}-winx64':
+            path: opt
 
 - job:
     name: pipeline-lynx64
@@ -107,8 +59,8 @@
       pipeline {{
           agent any
           stages {{
-              stage('dist-clean') {{
-                  steps {{ build job: 'dist-clean-lynx64' }}
+              stage('clean-opt') {{
+                  steps {{ build job: 'clean-opt-lynx64' }}
               }}
               stage('bullet') {{
                   steps {{ build job: 'bullet-lynx64' }}
@@ -155,8 +107,8 @@
       pipeline {{
           agent any
           stages {{
-              stage('dist-clean') {{
-                  steps {{ build job: 'dist-clean-winx64' }}
+              stage('clean-opt') {{
+                  steps {{ build job: 'clean-opt-winx64' }}
               }}
               stage('bullet') {{
                   steps {{ build job: 'bullet-winx64' }}
