--- a/jobs/bullet.yml
+++ b/jobs/bullet.yml
@@ -13,7 +13,7 @@
         - git:
             url: https://github.com/bulletphysics/bullet3.git
             branches:
-              - refs/tags/3.17
+              - refs/tags/3.25
             wipe-workspace: false
     builders:
         - cmake:
@@ -53,7 +53,7 @@
         - 'bullet-{arch}':
             arch: lynx64
             build: /app/build/bullet
-            generator: 'Unix Makefiles'
+            generator: Unix Makefiles
             install: /app/opt/bullet
             make: '-j 16'
             node: linux
