--- a/jobs/sdk/requirements.txt
+++ b/jobs/sdk/requirements.txt
@@ -6,6 +6,6 @@ jinja2==3.1.4
 jsonschema==3.2.0
 nvidia-ml-py==12.555.43
 oauth2==1.9.0.post1
-pillow==10.4.0
+# pillow==10.4.0
 py-ubjson==0.16.1
 pycryptodome==3.20.0
